2010-07-07  Nicolas Weber  <thakis@chromium.org>

Reviewed by Dimitri Glazkov.
        https://bugs.webkit.org/show_bug.cgi?id=41580

        Fix rendering of radial gradients in skia if both points of the
        gradient are the same and r0 > 0.

        * fast/gradients/radial-centered.html: Added.
2010-07-07  Nicolas Weber  <thakis@chromium.org>

        Reviewed by Dimitri Glazkov.
        https://bugs.webkit.org/show_bug.cgi?id=41580

        Fix rendering of radial gradients in skia if both points of the
        gradient are the same and r0 > 0.

        Test: fast/gradients/radial-centered.html

        * platform/graphics/skia/GradientSkia.cpp:
        (WebCore::Gradient::platformGradient):

Canonical link: https://commits.webkit.org/53651@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@62753 268f45cc-cd09-0410-ab3c-d52691b4dbfc